<resources>
    <string name="developer_name" translatable="false">&appdev;</string>
    <string name="error_happened_with_message">Error has happened:\n%s</string>
    <string name="error_happened">Error has happened</string>
    <string name="stats_time_spent">%d min.\nor\n%d hr. %d min.\nor\n%d d. %d hr. %d min.</string>
    <string name="cached_metadata_cleared_toast_message">Cached metadata cleared</string>
    <string name="cached_cleared_toast_message">"Cache cleared"</string>
    <string name="exit_dialog_prompt">You want to exit?</string>
    <string name="exit_button_title">Exit</string>
    <string name="close_button_title">Close</string>
    <string name="airing_schedule_fragment_title">Airing Schedule</string>
    <string name="anime_recommendations_fragment_title">More to Watch</string>
    <string name="trending_fragment_title">Trending</string>
    <string name="stats_fragment_title">Statistics</string>
    <string name="towatch_fragment_title">WatchList</string>
    <string name="watched_fragment_title">Library</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="thumbnail_fragment_title">Cover</string>
    <string name="playlists_fragment_title">Playlists</string>
    <string name="charts_fragment_title">Charts</string>
    <string name="anime_characters_fragment_title">Characters &amp; Cast</string>
    <string name="empty_message">Nothing here for now.</string>
    <string name="airing_schedule_monday_title">Monday</string>
    <string name="airing_schedule_tuesday_title">Tuesday</string>
    <string name="airing_schedule_wednesday_title">Wednesday</string>
    <string name="airing_schedule_thursday_title">Thursday</string>
    <string name="airing_schedule_friday_title">Friday</string>
    <string name="airing_schedule_saturday_title">Saturday</string>
    <string name="airing_schedule_sunday_title">Sunday</string>
    <string name="airing_schedule_today_title">%s (today)</string>
    <string name="error_reload_button_title">RELOAD</string>
    <string name="fragment_details_title">Details</string>
    <string name="fragment_anime_details_title">Anime Details</string>
    <string name="fragment_company_details_title">Company Details</string>
    <string name="cover_poster_button_title">COVER POSTER</string>
    <string name="next_episode_row_title">Next Episode:</string>
    <string name="type_row_title">Type:</string>
    <string name="episodes_row_title">Episodes:</string>
    <string name="status_row_title">Status:</string>
    <string name="aired_row_title">Aired:</string>
    <string name="producers_row_title">Producers:</string>
    <string name="studios_row_title">Studios:</string>
    <string name="duration_row_title">Duration:</string>
    <string name="recommendations_button_dummy_title">MORE TO WATCH</string>
    <string name="recommendations_button_title">MORE ANIME LIKE %s</string>
    <string name="characters_button_title">CHARACTERS &amp; CAST</string>
    <string name="available_at_title">Available at</string>
    <string name="relations_title">Related</string>
    <string name="opening_themes_title">Opening Themes</string>
    <string name="ending_themes_title">Ending Themes</string>
    <string name="summary_title">Summary</string>
    <string name="rating_title">Rating</string>
    <string name="watched_episodes_title">Episodes</string>
    <string name="notes_title">Notes</string>
    <string name="notes_hint">Note…</string>
    <string name="spinner_no_episode">No episode</string>
    <string name="spinner_episode">Episode %d</string>
    <string name="info_updated_toast_message">Info was updated</string>
    <string name="add_to_watched_button_title">Add to Library</string>
    <string name="remove_from_watched_button_title">In Library</string>
    <string name="added_to_watched_toast_message">%s was added to Library</string>
    <string name="removed_from_watched_toast_message">%s was removed from Library</string>
    <string name="add_to_towatch_button_title">Add to WatchList</string>
    <string name="remove_from_towatch_button_title">In WatchList</string>
    <string name="added_to_towatch_toast_message">%s was added to WatchList</string>
    <string name="removed_from_towatch_toast_message">%s was removed from WatchList</string>
    <string name="mark_as_finished_button_title">MARK AS FINISHED</string>
    <string name="finished_status">FINISHED</string>
    <string name="add_to_playlist_button_title">ADD TO PLAYLIST</string>
    <string name="added_to_playlist_toast_message">%s was added to %s</string>
    <string name="removed_from_playlist_toast_message">%s was removed from %s</string>
    <string name="already_added_to_playlist_toast_message">%s already added to %s</string>
    <string name="summary_not_presented">Summary hasn\'t been presented yet.</string>
    <string name="unknown_placeholder">Unknown</string>
    <string name="similar_to">Similar to %s</string>
    <string name="open_link_button_title">Open Link</string>
    <string name="scan_link_button_title">Scan Link</string>
    <string name="airing_schedule_button_title">Airing\nSchedule</string>
    <string name="charts_button_title">Charts</string>
    <string name="playlists_button_title">Playlists</string>
    <string name="stats_button_title">Statistics</string>
    <string name="settings_button_title">Settings</string>
    <string name="search_hint">Enter request…</string>
    <string name="search_category_anime_title">Anime</string>
    <string name="search_category_company_title">Company</string>
    <string name="stats_unique_entries_watched">Unique\nentries\nwatched</string>
    <string name="stats_entries_watched">Entries\nwatched</string>
    <string name="stats_unique_total_finished">Unique\nentries\nfinished</string>
    <string name="stats_total_finished">Entries\nfinished</string>
    <string name="stats_episodes_watched">Episodes\nwatched</string>
    <string name="stats_time_spent_watching">Spent on\nwatching</string>
    <string name="no_cover_message">No cover available</string>
    <string name="dialog_add_button_title">Add</string>
    <string name="dialog_cancel_button_title">Cancel</string>
    <string name="dialog_save_button_title">Save</string>
    <string name="dialog_open_button_title">Open</string>
    <string name="dialog_paste_button_title">Paste</string>
    <string name="open_by_url_dialog_edittext_hint">Enter link to anime\'s page…</string>
    <string name="add_to_towatch_dialog_title">Add to WatchList</string>
    <string name="add_to_towatch_dialog_title_row_title">Enter title:</string>
    <string name="add_to_towatch_dialog_title_validation_message">Title field must be filled!</string>
    <string name="add_to_towatch_dialog_secondary_title_row_title">Enter secondary title:</string>
    <string name="add_to_towatch_dialog_summary_row_title">Enter summary:</string>
    <string name="add_playlist_dialog_title">Add Playlist</string>
    <string name="add_playlist_dialog_name_row_title">Enter name:</string>
    <string name="add_playlist_dialog_name_validation_message">Name field must be filled!</string>
    <string name="add_playlist_dialog_description_row_title">Enter description:</string>
    <string name="edit_playlist_dialog_title">Add Playlist</string>
    <string name="copied_to_clipboard_toast_message">Copied to clipboard:\n%s</string>
    <string name="url_cannot_be_empty_message">Url cannot be empty</string>
    <string name="storage_title">Storage</string>
    <string name="app_icon_title">App Icon</string>
    <string name="bumper_title">Bumper</string>
    <string name="backup_title">Backup &amp; Restore</string>
    <string name="other_apps_row_title">Other apps</string>
    <string name="cache_row_title">Cache</string>
    <string name="free_row_title">Free</string>
    <string name="about_title">About &appname;</string>
    <string name="version_title">Version</string>
    <string name="developer_title">Developer</string>
    <string name="app_page_title">App on Github</string>
    <string name="attributions_title">Attributions</string>
    <string name="libraries_title">Libraries</string>
    <string name="company_works_title">Projects</string>
    <string name="in_watched_badge_text">In Library</string>
    <string name="in_towatch_badge_text">In WatchList</string>
    <string name="sort_dialog_sort_title">Sort</string>
    <string name="sort_dialog_filter_title">Filter</string>
    <string name="sort_dialog_sort_by_name">By Name</string>
    <string name="sort_dialog_sort_by_date">By Date</string>
    <string name="sort_dialog_filter_finished">Finished</string>
    <string name="sort_dialog_clear_filters_button_title">Clear filters</string>
    <string name="sort_dialog_filter_edittext_hint">Enter query…</string>
    <string name="changelog_dialog_title">Changelog</string>
    <string name="playlist_was_deleted">Playlist was deleted</string>
    <string name="context_menu_delete_item_title">Remove</string>
    <string name="context_menu_edit_item_title">Edit</string>
    <string name="charts_top_anime_title">Top Anime</string>
    <string name="charts_male_characters_title">Male Characters</string>
    <string name="charts_female_characters_title">Female Characters</string>
    <string name="charts_couples_title">Couple Ship</string>
    <string name="charts_op_songs_title">OP Theme Songs</string>
    <string name="charts_ed_songs_title">ED Theme Songs</string>
    <string name="charts_new">New</string>
    <string name="charts_week_text">Week %d</string>
    <string name="kiosk_trending_title">Trending</string>
    <string name="kiosk_next_season_title">Next Season</string>
    <string name="dialog_delete_button_title">Delete</string>
    <string name="dialog_delete_message">Delete playlist \"%s\"?</string>
    <string name="song_dialog_item_copy_title">Copy Title</string>
    <string name="song_dialog_item_copy_link">Copy Link</string>
    <string name="song_dialog_item_open_in_spotify">Open in Spotify App</string>
    <string name="search_manga_button_title">Search for source manga on %s</string>
    <string name="mangadex" translatable="false">MangaDex</string>
    <string name="results_found_title">%d result(s) found on %s</string>
    <string name="manga_dialog_item_copy_link">Copy Link</string>
    <string name="manga_dialog_item_open_in_tachiyomi">Open in Tachiyomi</string>
    <string name="file_saved_to_toast_message">Saved to %s</string>
    <string name="set_bumper_button_title">SET AS BUMPER</string>
    <string name="make_backup_success_toast_message">Exported</string>
    <string name="restore_success_toast_message">Imported. App will be restarted</string>
    <string name="invalid_backup_file">Invalid backup file</string>
    <string name="share_dialog_copy_button_title">Copy</string>
    <string name="share_dialog_share_button_title">Share</string>
    <string name="no_file_manager_message">No file manager was found.\nPlease install a file manager.</string>
    <string name="dialog_ok_button_title">OK</string>
    <string name="watched_episodes_text">%d/%d episodes</string>
    <string name="episodes_selector_dialog_select_all_button_title">Select All</string>
    <string name="episodes_selector_dialog_unselect_all_button_title">Unselect All</string>
    <string name="share_action_open_link_hint">Open Link</string>
    <string name="share_anime_extra_title">%s on MyAnimeList</string>
    <string name="settings_use_gradient_title">Use gradient in item page</string>
    <string name="settings_use_gradient_summary">Use gradient as a background on item\'s details\npage</string>
    <string name="settings_always_update_info_title">Always update info</string>
    <string name="nav_kiosk_title"></string>
    <string name="nav_towatch_title">WatchList</string>
    <string name="nav_search_title">Search</string>
    <string name="nav_watched_title">Library</string>
    <string name="nav_more_options_title">More</string>
</resources>