<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp" >

    <TextView
        android:id="@+id/dialog_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist_dialog_title"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist_dialog_name_row_title"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_title_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textColorHint="#c0c0c0"
        android:backgroundTint="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/name_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/name_validation_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist_dialog_name_validation_message"
        android:textColor="@android:color/holo_red_light"
        android:textSize="13sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/name_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist_dialog_description_row_title"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/name_validation_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:textColor="#ffffff"
        android:textColorHint="#c0c0c0"
        android:backgroundTint="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/description_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>