<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:id="@+id/open_by_url_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@null"
            android:padding="15dp"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_link_button_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/airing_schedule_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@null"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/airing_schedule_button_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/charts_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@null"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charts_button_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playlists_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@null"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playlists_button_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/stats_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@null"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stats_button_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@null"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>