<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#171717"
    android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sort_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    <TextView
        android:id="@+id/sort_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_dialog_sort_title"
        android:background="#171717"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/sort_title_layout" >

            <TextView
                android:id="@+id/filter_title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_dialog_filter_title"
                android:background="#171717"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/sort_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/sort_by_name_icon_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#FFFFFF"
                    android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/sort_by_name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_dialog_sort_by_name"
        android:background="#171717"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:padding="15dp"
        android:layout_gravity="center_vertical" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp" >

            <ImageView
                android:id="@+id/sort_by_date_icon_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_top_arrow_white"
                android:tint="#FFFFFF"
                android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/sort_by_date_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_dialog_sort_by_date"
        android:background="#171717"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:padding="15dp"
        android:layout_gravity="center_vertical" />

        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="10dp" >

                <EditText
                    android:id="@+id/filter_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sort_dialog_filter_edittext_hint"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#C0C0C0"
                    android:backgroundTint="#C0C0C0"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/filter_finished_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_dialog_filter_finished"
                android:background="#171717"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

                <CheckBox
                    android:id="@+id/filter_finished_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" >

                <TextView
                    android:id="@+id/clear_filters_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_dialog_clear_filters_button_title"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/bordered_button"
                    android:padding="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>